<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Saifu</string>
    <string name="title_home">ホーム</string>
    <string name="title_want">欲しい物リスト</string>
    <string name="title_log">履歴</string>
    <string name="title_setting">設定</string>
    <string name="title_new">新規登録</string>
    <string name="title_data_input">データ入力</string>
    <string name="total_budget">予算</string>
    <string name="total_income">⊕総収入</string>
    <string name="total_spend">⊖総支出</string>
    <string name="yen_50k"><u>50000円</u></string>
    <string name="yen_100k"><u>100000円</u></string>
    <string name="title_activity_settings">設定</string>
    <string name="notifications">通知</string>
    <string name="budget_input">予算入力</string>
    <string name="category_config">カテゴリ設定</string>
    <string name="category_select">カテゴリを選択...</string>
    <string name="day_kari">2020/7/10</string>
    <string name="yen_kari">1000</string>
    <string name="currency">¥</string>
    <string name="currencyString">¥%1$s</string>
    <string name="minus">－</string>
    <string name="plus">＋</string>
    <string name="plus1">+1</string>
    <string name="plus7">+7</string>
    <string name="Today">今日</string>
    <string name="minus1">-1</string>
    <string name="minus7">-7</string>
    <string name="frequent_category">よく使うカテゴリ</string>
    <string name="apply">登録</string>
    <string name="memo_add">メモを追加...</string>
    <string name="picture_add">画像を追加...</string>
    <string name="picture_delete">画像を削除</string>
    <string name="shortcut_add">この入力をショートカットに登録</string>
    <string name="dateformat">%1$d/%2$d/%3$d</string>
    <string name="times">回</string>
    <string name="pertimes">%1$d 円 ／ 回</string>
    <string name="pertimes_kari">1,500 円 ／ 回</string>
    <string name="split">分割する</string>
    <string name="search">検索</string>
    <string name="graph">グラフ</string>
    <string name="report">レポート</string>
    <string name="message_kari">今月はいい感じです。</string>
    <string name="delnotification">通知を全て消去</string>
    <string name="calendar_title">%1$d年%2$d月</string>
    <string name="calendar_title_kari">2020年7月</string>
    <string name="prev_month">前月</string>
    <string name="next_month">次月</string>
    <string name="sunday">日</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="monday">月</string>
    <string name="thursday">木</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="tateyoko">縦横切替</string>
    <string name="nedan_kari">￥1,000</string>
    <string name="kari">仮</string>
    <string name="today_parentheses">(今日)</string>
    <string name="prev_day">(%1$d日前)</string>
    <string name="next_day">(%1$d日後)</string>
    <string name="name">名称</string>
    <string name="price">金額</string>
    <string name="add_url">URLを追加 ＋</string>
    <string name="add_picture">画像を追加 ＋</string>
    <string name="memo">メモ</string>
    <string name="one">1</string>
    <string name="period_kari">11月23日～1月23日までのレポートです</string>
    <string name="income_kari">・収入</string>
    <string name="spending_kari">・支出</string>
    <string name="profit_kari">・収益</string>
    <string name="category1_kari">・食費</string>
    <string name="category2_kari">・被服費</string>
    <string name="category3_kari">・娯楽費</string>
    <string name="category1_yen_kari">a円</string>
    <string name="category2_yen_kari">b円</string>
    <string name="category3_yen_kari">c円</string>
    <string name="income_yen_kari">x円</string>
    <string name="spending_yen_kari">y円</string>
    <string name="profit_yen_kari">z円</string>
    <string name="category_kari">カテゴリ別支出</string>
    <string name="report_hyouzi_kari">＊過去のレポートを表示</string>
    <string name="channel_description">cdtest</string>
    <string name="channel_name">cdname</string>
    <string name="url">URL</string>
    <string name="add">追加</string>
    <string name="amazonAdd">アマゾンから追加</string>
    <string name="delete_item">項目を削除</string>
    <string name="NC_transition">NC_transition</string>
    <string name="Error">エラーが発生しました</string>
    <string name="recordError">データ登録エラー</string>
    <string name="shortcutQuickAdd">ショートカット即時登録</string>
    <string name="shortcutEdit">ショートカット編集</string>
    <string name="shortcutformat">%1$s\n¥%2$s</string>
    <string name="recordFinish">記録完了</string>
    <string name="completeAdd">追加しました。</string>
    <string name="duplicationAdd">すでに登録済みです。</string>
    <string name="startInput">起動時に入力画面に推移</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="needShortcut">このウィジェットの使用には1つ以上のショートカット項目が必要です。\nアプリ内でショートカットを登録してからお使いください。</string>
    <string name="inComeCancel">キャンセル</string>
    <string name="inComeAdd">追加</string>
    <string name="inComeNameHint">収入名を入力して下さい。</string>
    <string name="inComePriceHint">収入金額を入力して下さい。</string>
</resources>
