<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ze20.saifu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_want"
        android:name="com.ze20.saifu.ui.wish.WishFlagment"
        android:label="@string/title_want"
        tools:layout="@layout/fragment_wish" />

    <fragment
        android:id="@+id/navigation_log"
        android:name="com.ze20.saifu.ui.log.logFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.ze20.saifu.ui.setting.SettingsActivity$SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting"/>


</navigation>
