<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category3_yentext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_budget"
            android:textColor="#00ff00"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/Budgettext"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="right"
            android:text="@string/yen_50k"
            android:textSize="45dp" />

        <TextView
            android:id="@+id/category2text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_income"
            android:textColor="#0000ff"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/incomeSumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/yen_100k"
            android:textSize="45dp" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="40dp"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:text="編集" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/incometext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_spend"
            android:textColor="#ff0000"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Spendingtext"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yen_50k"
            android:textSize="45dp" />

        <Button
            android:id="@+id/button_send2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="40dp"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:text="編集" />

    </LinearLayout>
</LinearLayout>
